--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ source/.obj/*.o
 source/.obj/deps/*.d
 source/test/.obj/*.o
 source/test/.obj/deps/*.d
+source/*.deactivate
+source/test/*.deactivate
+include/*.deactivate
